--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "puppeteer": "^22.10.0"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:e2e": "jest --maxWorkers=1"
+    "test": "jest --maxWorkers=1"
   },
   "type": "module",
   "jest": {
